<resources>
    <string name="app_name">EnterpriseProject</string>

    //Login/Signup pages
    <string name="loginButton">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="usernameText">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="show_pass">Show Password</string>
    <string name="hide_pass">Hide Password</string>
    <string name="forgotten">Forgot password?</string>
    <string name="not_user">Not a member yet? Sign up here</string>

    //Sign up fields
    <string name="full_name">Enter your full name</string>
    <string name="mobileNumber">Enter your mobile number</string>
    <string name="location">Enter your location</string>

    <string name="registration">Enter Vehicle registration</string>
    <string name="terms_conditions">By signing up you agree to our Terms and Conditions</string>

    //Home Page fields
    <string name="showUserName">Get the current users name</string>
    <string name="showUserNumber">Get the current users number</string>
    <string name="showUserLocation">Get the current users location</string>
    <string name="showUserEmail">Get the current users email</string>
    <string name="userDetails">User Details</string>
    <string name="signOut">Sign Out</string>
    <string name="settingsButton">Settings page</string>
    <string name="driverButton">Driver page</string>

    //User Page
    <string name="requestCourier">User</string>

    //Request courier service page
    <string name="deliveryType">advert type</string>
    <string name="deliverTo">delivering To</string>
    <string name="size">size</string>
    <string name="weight">weight</string>
    <string name="basePay">pay</string>
    <string name="collect">collect</string>
    <string name="bid">Bid</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="imageView">Viewing the image</string>
    <string name="imageButton">Button for image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //My account page
    <string name="updateDetails">Updating the user details</string>
    <string name="showRegistration">Vehicle registration number</string>
    <string name="driverUpdate">Register as a Driver</string>
    <string name="registrationNum">Vehicle registration Number</string>


    <string name="deliveryTypes">get the advert item type</string>

    //Items page
    <string name="updateBid">Update Current Bid</string>
    <string name="enterBid">Entering A Bid</string>
    <string name="getBid">Getting The Bid</string>
    <string name="removeAdvert">Remove Advert</string>
    <string name="viewAdvert">View Advert</string>

    //Advert Details page
    <string name="selectBid">Select Bid</string>
    <string name="userId">User ID</string>
    <string name="rating">Rating</string>
    <string name="advertName">Get name of advert</string>






    //Rating
    <string name="ratingBar">Current rating</string>
    <string name="placeRating">Button to place rating</string>

    //f
    <string name="confirmDelivery">Confirm Delivery</string>
</resources>
